--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -126,10 +126,10 @@
             <span class="material-icons-outlined">poll</span> Search
           </li>
           <li class="sidebar-list-item" onclick="showSection('settings')">
-            <a href="/attendance"></a>  <span class="material-icons-outlined"   > settings</span> Attendance
+            <a href="/attendance">  <span class="material-icons-outlined"   > settings</span> Attendance </a>
           </li>
-          <li class="sidebar-list-item"><a href="/show-attendance"></a>
-            <span class="material-icons-outlined">logout</span> Logout
+          <li class="sidebar-list-item"><a href="/show-attendance">
+            <span class="material-icons-outlined">logout</span> show-attendance </a>
           </li>
         </ul>
       </aside>
@@ -198,6 +198,14 @@
               <input type="text" name="enroll"  placeholder="Enrollment Number" required>
           </div>
           <div class="form-group">
+            <label for="Branch">Branch</label>
+            <input type="text" name="Branch"  placeholder="Branch" required>
+        </div>
+        <div class="form-group">
+          <label for="Course">Course</label>
+          <input type="text" name="Course"  placeholder="Course" required>
+      </div>
+          <div class="form-group">
               <label for="semester">Semester</label>
               <input type="number" name="semester" placeholder="Semester" required>
           </div>
@@ -210,8 +218,36 @@
           <input type="text" minlength="10" maxlength="10" name="parentsphn" placeholder="parents phone Number" required>
       </div>
       <div class="form-group">
-        <label for="marks">C.G.P.A</label>
-        <input type="number" name="marks" placeholder="C.G.P.A" required>
+        <label for="firstSem">I S.G.P.A</label>
+        <input type="number" name="firstSem" placeholder="I S.G.P.A" required>
+    </div>
+    <div class="form-group">
+      <label for="secSem">II S.G.P.A</label>
+      <input type="number" name="secSem" placeholder="II S.G.P.A" required>
+  </div>
+  <div class="form-group">
+    <label for="thirdSem">III S.G.P.A</label>
+    <input type="number" name="thirdSem" placeholder="III S.G.P.A" required>
+</div>
+<div class="form-group">
+  <label for="fourthSem">IV S.G.P.A</label>
+  <input type="number" name="fourthSem" placeholder="IV S.G.P.A" required>
+</div>
+<div class="form-group">
+  <label for="fifthSem">V S.G.P.A</label>
+  <input type="number" name="fifthSem" placeholder="V S.G.P.A" required>
+</div>
+<div class="form-group">
+  <label for="sixthSem">VI S.G.P.A</label>
+  <input type="number" name="sixthSem" placeholder="VI S.G.P.A" required>
+</div>
+<div class="form-group">
+  <label for="seventhSem">VII S.G.P.A</label>
+  <input type="number" name="seventhSem" placeholder="VII S.G.P.A" required>
+</div>
+      <div class="form-group">
+        <label for="marks">VIII C.G.P.A</label>
+        <input type="number" name="marks" placeholder="VIII C.G.P.A" required>
     </div>
     <div class="form-group">
       <label for="profilepic">Profilepic</label>
@@ -262,10 +298,19 @@
               <th>Name</th>
               <th>Email</th>
               <th>Enrollment Number</th>
+              <th>Branch</th>
+              <th>Course</th>
               <th>Semester</th>
               <th>personal phone Number</th>
               <th>parents phone Number</th>
-              <th>C.G.P.A.</th>
+              <th>I S.G.P.A</th>
+              <th>II S.G.P.A</th>
+              <th>III S.G.P.A</th>
+              <th>IV S.G.P.A</th>
+              <th>V S.G.P.A</th>
+              <th>VI S.G.P.A</th>
+              <th>VII S.G.P.A</th>
+              <th>VIII C.G.P.A.</th>
               <th>profilepic</th>
             </tr>
           </thead>
@@ -274,9 +319,18 @@
               <td><input type="text" id="name" readonly /></td>
               <td><input type="email" id="mail" readonly /></td>
               <td><input type="text" id="enrollDisplay" readonly /></td>
+              <td><input type="text" id="Branch" readonly /></td>
+              <td><input type="text" id="Course" readonly /></td>
               <td><input type="number" id="semester" readonly /></td>
               <td><input type="number" id="prsnlphn" readonly /></td>
               <td><input type="number" id="parentsphn" readonly /></td>
+              <td><input type="number" id="firstSem" readonly /></td>
+              <td><input type="number" id="secSem" readonly /></td>
+              <td><input type="number" id="thirdSem" readonly /></td>
+              <td><input type="number" id="fourthSem" readonly /></td>
+              <td><input type="number" id="fifthSem" readonly /></td>
+              <td><input type="number" id="sixthSem" readonly /></td>
+              <td><input type="number" id="seventhSem" readonly /></td>
               <td><input type="number" id="marks" readonly /></td>
               <td><img id="profilepic" src="" alt="Profile Picture" style="width: 50px; height: 50px;" /></td>
             </tr>
@@ -357,9 +411,18 @@
       document.getElementById("name").value = student.name;
       document.getElementById("mail").value = student.mail;
       document.getElementById("enrollDisplay").value = student.enroll;
+      document.getElementById("Branch").value = student.Branch;
+      document.getElementById("Course").value = student.Course;
       document.getElementById("semester").value = student.semester;
       document.getElementById("prsnlphn").value = student.prsnlphn;
       document.getElementById("parentsphn").value = student.parentsphn;
+      document.getElementById("firstSem").value = student.firstSem;
+      document.getElementById("secSem").value = student.secSem;
+      document.getElementById("thirdSem").value = student.thirdSem;
+      document.getElementById("fourthSem").value = student.fourthSem;
+      document.getElementById("fifthSem").value = student.fifthSem;
+      document.getElementById("sixthSem").value = student.sixthSem;
+      document.getElementById("seventhSem").value = student.seventhSem;
       document.getElementById("marks").value = student.marks;
      // document.getElementById("profilepic").value = student.profilepic;
      const profilePicElement = document.getElementById("profilepic");
