--- a/views/filter.ejs
+++ b/views/filter.ejs
@@ -8,6 +8,14 @@
  
 </head>
 <body>
+  <header class="header">
+    <a href="/dashboard">dashboard</a>
+    <a href="/attendance">attendance</a>
+    <a href="/show-attendance">show-attendance</a>
+    <a href="/Profile">update-profile</a>
+    <a href="/feed">details</a>
+    <a href="/filter">filter</a>
+     </header>
   <h1>Student Dashboard</h1>
 
   <form action="/filter" method="POST">
