--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -14,6 +14,14 @@
       </style>
 </head>
 <body>
+    <header class="header">
+        <a href="/dashboard">dashboard</a>
+        <a href="/attendance">attendance</a>
+        <a href="/show-attendance">show-attendance</a>
+        <a href="/Profile">update-profile</a>
+        <a href="/feed">details</a>
+        <a href="/filter">filter</a>
+         </header>
     <h1>mark attendance</h1>
    <form action="/attendance" id="attendanceForm" method="post">
     <input type="date" id="date" name="date">
