--- a/views/allusers.ejs
+++ b/views/allusers.ejs
@@ -9,17 +9,19 @@
   <!-- Custom CSS -->
  
     <link rel="stylesheet" href="/css/allusers.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 </head>
 <body>
     <header class="header">
-        <a href="/dashboard">dashboard</a>
-       
-     <a href="/attendance">attendance</a>
-     <a href="/show-attendance">show-attendance</a>
-     <a href="/Profile">update-profile</a>
-     <a href="/feed">details</a>
-     <a href="/filter">filter</a>
-      </header>
+        <a href="/dashboard"><i class="fas fa-home"></i> Dashboard</a>
+        <a href="/attendance"><i class="fas fa-calendar-check"></i> Attendance</a>
+        <a href="/show-attendance"><i class="fas fa-list"></i> Show Attendance</a>
+        <a href="/Profile"><i class="fas fa-user"></i> Update Profile</a>
+        <a href="/feed"><i class="fas fa-info-circle"></i> Details</a>
+        <a href="/filter"><i class="fas fa-filter"></i> Filter</a>
+    </header>
+    
       <!-- End Header -->
 
 
